--- a/components/textarea/textarea.module.css
+++ b/components/textarea/textarea.module.css
@@ -34,11 +34,11 @@
 .root.disabled {
   --textarea-bg: var(--accent-1);
   --textarea-border: var(--accent-2);
-  --textarea-fg: var(--accent-3);
+  --textarea-fg: var(--accent-4);
   cursor: not-allowed;
   opacity: 1;
 }
 
 .root::placeholder {
-  color: var(--accent-3);
+  color: var(--accent-4);
 }
